// Autogenerated with StateSmith 0.19.0+be4abd438d89a262c20ed0ded75ff7b8133d47fd.
// Algorithm: Balanced2. See https://github.com/StateSmith/StateSmith/wiki/Algorithms

// Whatever you put in this `FileTop` section will end up 
// being printed at the top of every generated code file.

import Foundation
// whatever you need to import here


// Generated state machine
public class FileUpload
{
// Add custom code here to inject into the generated class.
// Inheritance or composition might be a better choice.

    public enum EventId : Int
    {
        case CANCEL = 0
        case DIDCACHEATTACHMENT = 1
        case DIDCALCULATEFILESIZE = 2
        case DIDCREATERESOURCE = 3
        case DIDFAIL = 4
        case DIDSENDMESSAGE = 5
        case DIDUPLOADCHUNK = 6
        case PAUSE = 7
        case RESUME = 8
        case SEND = 9
    }
    
    public  let EventIdCount : Int = 10
    
    public enum StateId : Int
    {
        case ROOT = 0
        case ACITVE_GROUP = 1
        case BUSY_GROUP = 2
        case CACHING = 3
        case CALCULATING = 4
        case CREATING = 5
        case SENDING = 6
        case UPLOADING = 7
        case PAUSED = 8
        case IDLE = 9
    }
    
    public  let StateIdCount : Int = 10
    
    // Used internally by state machine. Feel free to inspect, but don't modify.
    public var stateId: StateId  = .ROOT
    
    // State machine variables. Can be used for inputs, outputs, user variables...
    public struct Vars
    {
        var message: ChatRoomMessage?
        var fileOffset = 0
        var fileSize = 0
        var chunkSize = 0
    }
    
    // Variables. Can be used for inputs, outputs, user variables...
    public var vars : Vars = Vars()
    
    // State machine constructor. Must be called before start or dispatch event functions. Not thread safe.
    public init()
    {
    }
    
    // Starts the state machine. Must be called before dispatching events. Not thread safe.
    public func start()
    {
        self.ROOT_enter()
        // ROOT behavior
        // uml: TransitionTo(ROOT.<InitialState>)
        do {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `ROOT.<InitialState>`.
            // ROOT.<InitialState> is a pseudo state and cannot have an `enter` trigger.
            
            // ROOT.<InitialState> behavior
            // uml: TransitionTo(IDLE)
            do {
                // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.
                
                // Step 2: Transition action: ``.
                
                // Step 3: Enter/move towards transition target `IDLE`.
                self.IDLE_enter()
                
                // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
                return
            } catch {} // end of behavior for ROOT.<InitialState>
        } catch {} // end of behavior for ROOT
    }
    
    // Dispatches an event to the state machine. Not thread safe.
    // Note! This function assumes that the `eventId` parameter is valid.
    public func dispatchEvent(_ eventId : EventId )
    {
        switch self.stateId
        {
            // STATE: FileUpload
            case StateId.ROOT:
                // No events handled by this state (or its ancestors).
                break

            
            // STATE: ACITVE_GROUP
            case StateId.ACITVE_GROUP:
                switch eventId
                {
                    case EventId.CANCEL: self.ACITVE_GROUP_cancel() 
                    case EventId.DIDFAIL: self.ACITVE_GROUP_didfail() 
                    default: break
                }

            
            // STATE: BUSY_GROUP
            case StateId.BUSY_GROUP:
                switch eventId
                {
                    case EventId.PAUSE: self.BUSY_GROUP_pause() 
                    case EventId.CANCEL: self.ACITVE_GROUP_cancel()  // First ancestor handler for this event
                    case EventId.DIDFAIL: self.ACITVE_GROUP_didfail()  // First ancestor handler for this event
                    default: break
                }

            
            // STATE: CACHING
            case StateId.CACHING:
                switch eventId
                {
                    case EventId.DIDCACHEATTACHMENT: self.CACHING_didcacheattachment() 
                    case EventId.CANCEL: self.ACITVE_GROUP_cancel()  // First ancestor handler for this event
                    case EventId.DIDFAIL: self.ACITVE_GROUP_didfail()  // First ancestor handler for this event
                    case EventId.PAUSE: self.BUSY_GROUP_pause()  // First ancestor handler for this event
                    default: break
                }

            
            // STATE: CALCULATING
            case StateId.CALCULATING:
                switch eventId
                {
                    case EventId.DIDCALCULATEFILESIZE: self.CALCULATING_didcalculatefilesize() 
                    case EventId.CANCEL: self.ACITVE_GROUP_cancel()  // First ancestor handler for this event
                    case EventId.DIDFAIL: self.ACITVE_GROUP_didfail()  // First ancestor handler for this event
                    case EventId.PAUSE: self.BUSY_GROUP_pause()  // First ancestor handler for this event
                    default: break
                }

            
            // STATE: CREATING
            case StateId.CREATING:
                switch eventId
                {
                    case EventId.DIDCREATERESOURCE: self.CREATING_didcreateresource() 
                    case EventId.CANCEL: self.ACITVE_GROUP_cancel()  // First ancestor handler for this event
                    case EventId.DIDFAIL: self.ACITVE_GROUP_didfail()  // First ancestor handler for this event
                    case EventId.PAUSE: self.BUSY_GROUP_pause()  // First ancestor handler for this event
                    default: break
                }

            
            // STATE: SENDING
            case StateId.SENDING:
                switch eventId
                {
                    case EventId.DIDSENDMESSAGE: self.SENDING_didsendmessage() 
                    case EventId.CANCEL: self.ACITVE_GROUP_cancel()  // First ancestor handler for this event
                    case EventId.DIDFAIL: self.ACITVE_GROUP_didfail()  // First ancestor handler for this event
                    case EventId.PAUSE: self.BUSY_GROUP_pause()  // First ancestor handler for this event
                    default: break
                }

            
            // STATE: UPLOADING
            case StateId.UPLOADING:
                switch eventId
                {
                    case EventId.DIDUPLOADCHUNK: self.UPLOADING_diduploadchunk() 
                    case EventId.CANCEL: self.ACITVE_GROUP_cancel()  // First ancestor handler for this event
                    case EventId.DIDFAIL: self.ACITVE_GROUP_didfail()  // First ancestor handler for this event
                    case EventId.PAUSE: self.BUSY_GROUP_pause()  // First ancestor handler for this event
                    default: break
                }

            
            // STATE: PAUSED
            case StateId.PAUSED:
                switch eventId
                {
                    case EventId.RESUME: self.PAUSED_resume() 
                    case EventId.CANCEL: self.ACITVE_GROUP_cancel()  // First ancestor handler for this event
                    case EventId.DIDFAIL: self.ACITVE_GROUP_didfail()  // First ancestor handler for this event
                    default: break
                }

            
            // STATE: IDLE
            case StateId.IDLE:
                switch eventId
                {
                    case EventId.SEND: self.IDLE_send() 
                    default: break
                }

            default: break
        }
    }
    
    // This function is used when StateSmith doesn't know what the active leaf state is at
    // compile time due to sub states or when multiple states need to be exited.
    private func exitUpToStateHandler(_ desiredState : StateId )
    {
        while self.stateId != desiredState
        {
            switch self.stateId
            {
                case StateId.ACITVE_GROUP: self.ACITVE_GROUP_exit() 
                
                case StateId.BUSY_GROUP: self.BUSY_GROUP_exit() 
                
                case StateId.CACHING: self.CACHING_exit() 
                
                case StateId.CALCULATING: self.CALCULATING_exit() 
                
                case StateId.CREATING: self.CREATING_exit() 
                
                case StateId.SENDING: self.SENDING_exit() 
                
                case StateId.UPLOADING: self.UPLOADING_exit() 
                
                case StateId.PAUSED: self.PAUSED_exit() 
                
                case StateId.IDLE: self.IDLE_exit() 
                
                default: return  // Just to be safe. Prevents infinite loop if state ID memory is somehow corrupted.
            }
        }
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state ROOT
    ////////////////////////////////////////////////////////////////////////////////
    
    private func ROOT_enter()
    {
        self.stateId = StateId.ROOT
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state ACITVE_GROUP
    ////////////////////////////////////////////////////////////////////////////////
    
    private func ACITVE_GROUP_enter()
    {
        self.stateId = StateId.ACITVE_GROUP
    }
    
    private func ACITVE_GROUP_exit()
    {
        // ACITVE_GROUP behavior
        // uml: exit / { cleanupCache() }
        do {
            // Step 1: execute action `cleanupCache()`
            cleanupCache()
        } catch {} // end of behavior for ACITVE_GROUP
        
        self.stateId = StateId.ROOT
    }
    
    private func ACITVE_GROUP_cancel()
    {
        // ACITVE_GROUP behavior
        // uml: cancel / { deleteResource() }
        do {
            // Step 1: execute action `deleteResource()`
            deleteResource()
        } catch {} // end of behavior for ACITVE_GROUP
        
        // ACITVE_GROUP behavior
        // uml: cancel TransitionTo(IDLE)
        do {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            self.exitUpToStateHandler(StateId.ROOT)
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `IDLE`.
            self.IDLE_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } catch {} // end of behavior for ACITVE_GROUP
    }
    
    private func ACITVE_GROUP_didfail()
    {
        // ACITVE_GROUP behavior
        // uml: didFail / { deleteResource() }
        do {
            // Step 1: execute action `deleteResource()`
            deleteResource()
        } catch {} // end of behavior for ACITVE_GROUP
        
        // ACITVE_GROUP behavior
        // uml: didFail TransitionTo(IDLE)
        do {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            self.exitUpToStateHandler(StateId.ROOT)
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `IDLE`.
            self.IDLE_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } catch {} // end of behavior for ACITVE_GROUP
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state BUSY_GROUP
    ////////////////////////////////////////////////////////////////////////////////
    
    private func BUSY_GROUP_enter()
    {
        self.stateId = StateId.BUSY_GROUP
    }
    
    private func BUSY_GROUP_exit()
    {
        self.stateId = StateId.ACITVE_GROUP
    }
    
    private func BUSY_GROUP_pause()
    {
        // BUSY_GROUP behavior
        // uml: pause TransitionTo(PAUSED)
        do {
            // Step 1: Exit states until we reach `ACITVE_GROUP` state (Least Common Ancestor for transition).
            self.exitUpToStateHandler(StateId.ACITVE_GROUP)
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `PAUSED`.
            self.PAUSED_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } catch {} // end of behavior for BUSY_GROUP
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state CACHING
    ////////////////////////////////////////////////////////////////////////////////
    
    private func CACHING_enter()
    {
        self.stateId = StateId.CACHING
        
        // CACHING behavior
        // uml: enter / { cacheAttachment() }
        do {
            // Step 1: execute action `cacheAttachment()`
            cacheAttachment()
        } catch {} // end of behavior for CACHING
    }
    
    private func CACHING_exit()
    {
        self.stateId = StateId.BUSY_GROUP
    }
    
    private func CACHING_didcacheattachment()
    {
        // CACHING behavior
        // uml: didCacheAttachment TransitionTo(CREATING)
        do {
            // Step 1: Exit states until we reach `BUSY_GROUP` state (Least Common Ancestor for transition).
            self.CACHING_exit()
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `CREATING`.
            self.CREATING_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } catch {} // end of behavior for CACHING
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state CALCULATING
    ////////////////////////////////////////////////////////////////////////////////
    
    private func CALCULATING_enter()
    {
        self.stateId = StateId.CALCULATING
        
        // CALCULATING behavior
        // uml: enter / { calculateFileSize() }
        do {
            // Step 1: execute action `calculateFileSize()`
            calculateFileSize()
        } catch {} // end of behavior for CALCULATING
    }
    
    private func CALCULATING_exit()
    {
        self.stateId = StateId.BUSY_GROUP
    }
    
    private func CALCULATING_didcalculatefilesize()
    {
        // CALCULATING behavior
        // uml: 1. didCalculateFileSize / { resetUploadStatus() }
        do {
            // Step 1: execute action `resetUploadStatus()`
            resetUploadStatus()
        } catch {} // end of behavior for CALCULATING
        
        // CALCULATING behavior
        // uml: didCalculateFileSize TransitionTo(UPLOADING)
        do {
            // Step 1: Exit states until we reach `BUSY_GROUP` state (Least Common Ancestor for transition).
            self.CALCULATING_exit()
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `UPLOADING`.
            self.UPLOADING_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } catch {} // end of behavior for CALCULATING
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state CREATING
    ////////////////////////////////////////////////////////////////////////////////
    
    private func CREATING_enter()
    {
        self.stateId = StateId.CREATING
        
        // CREATING behavior
        // uml: enter / { createResource() }
        do {
            // Step 1: execute action `createResource()`
            createResource()
        } catch {} // end of behavior for CREATING
    }
    
    private func CREATING_exit()
    {
        self.stateId = StateId.BUSY_GROUP
    }
    
    private func CREATING_didcreateresource()
    {
        // CREATING behavior
        // uml: didCreateResource / { notifyAttachmentCreated() }
        do {
            // Step 1: execute action `notifyAttachmentCreated()`
            notifyAttachmentCreated()
        } catch {} // end of behavior for CREATING
        
        // CREATING behavior
        // uml: didCreateResource [vars.fileSize > 0] TransitionTo(CALCULATING)
        if vars.fileSize > 0
        {
            // Step 1: Exit states until we reach `BUSY_GROUP` state (Least Common Ancestor for transition).
            self.CREATING_exit()
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `CALCULATING`.
            self.CALCULATING_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } // end of behavior for CREATING
        
        // CREATING behavior
        // uml: didCreateResource [vars.fileSize == 0] TransitionTo(SENDING)
        if vars.fileSize == 0
        {
            // Step 1: Exit states until we reach `BUSY_GROUP` state (Least Common Ancestor for transition).
            self.CREATING_exit()
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `SENDING`.
            self.SENDING_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } // end of behavior for CREATING
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state SENDING
    ////////////////////////////////////////////////////////////////////////////////
    
    private func SENDING_enter()
    {
        self.stateId = StateId.SENDING
        
        // SENDING behavior
        // uml: enter / { sendMessage() }
        do {
            // Step 1: execute action `sendMessage()`
            sendMessage()
        } catch {} // end of behavior for SENDING
    }
    
    private func SENDING_exit()
    {
        self.stateId = StateId.BUSY_GROUP
    }
    
    private func SENDING_didsendmessage()
    {
        // SENDING behavior
        // uml: didSendMessage / { notifyMessageSent() }
        do {
            // Step 1: execute action `notifyMessageSent()`
            notifyMessageSent()
        } catch {} // end of behavior for SENDING
        
        // SENDING behavior
        // uml: didSendMessage TransitionTo(IDLE)
        do {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            self.exitUpToStateHandler(StateId.ROOT)
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `IDLE`.
            self.IDLE_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } catch {} // end of behavior for SENDING
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state UPLOADING
    ////////////////////////////////////////////////////////////////////////////////
    
    private func UPLOADING_enter()
    {
        self.stateId = StateId.UPLOADING
        
        // UPLOADING behavior
        // uml: enter / { sendFileChunk() }
        do {
            // Step 1: execute action `sendFileChunk()`
            sendFileChunk()
        } catch {} // end of behavior for UPLOADING
    }
    
    private func UPLOADING_exit()
    {
        self.stateId = StateId.BUSY_GROUP
    }
    
    private func UPLOADING_diduploadchunk()
    {
        // UPLOADING behavior
        // uml: 1. didUploadChunk / { updateUploadStatus(vars.chunkSize) }
        do {
            // Step 1: execute action `updateUploadStatus(vars.chunkSize)`
            updateUploadStatus(vars.chunkSize)
        } catch {} // end of behavior for UPLOADING
        
        // UPLOADING behavior
        // uml: 2. didUploadChunk / { notifyUploadProgress() }
        do {
            // Step 1: execute action `notifyUploadProgress()`
            notifyUploadProgress()
        } catch {} // end of behavior for UPLOADING
        
        // UPLOADING behavior
        // uml: didUploadChunk [vars.fileOffset < vars.fileSize] TransitionTo(UPLOADING)
        if vars.fileOffset < vars.fileSize
        {
            // Step 1: Exit states until we reach `BUSY_GROUP` state (Least Common Ancestor for transition).
            self.UPLOADING_exit()
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `UPLOADING`.
            self.UPLOADING_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } // end of behavior for UPLOADING
        
        // UPLOADING behavior
        // uml: didUploadChunk [vars.fileOffset >= vars.fileSize] TransitionTo(SENDING)
        if vars.fileOffset >= vars.fileSize
        {
            // Step 1: Exit states until we reach `BUSY_GROUP` state (Least Common Ancestor for transition).
            self.UPLOADING_exit()
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `SENDING`.
            self.SENDING_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } // end of behavior for UPLOADING
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state PAUSED
    ////////////////////////////////////////////////////////////////////////////////
    
    private func PAUSED_enter()
    {
        self.stateId = StateId.PAUSED
    }
    
    private func PAUSED_exit()
    {
        self.stateId = StateId.ACITVE_GROUP
    }
    
    private func PAUSED_resume()
    {
        // PAUSED behavior
        // uml: resume TransitionTo(ACITVE_GROUP.<ChoicePoint>(RESUMING))
        do {
            // Step 1: Exit states until we reach `ACITVE_GROUP` state (Least Common Ancestor for transition).
            self.PAUSED_exit()
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `ACITVE_GROUP.<ChoicePoint>(RESUMING)`.
            // ACITVE_GROUP.<ChoicePoint>(RESUMING) is a pseudo state and cannot have an `enter` trigger.
            
            // ACITVE_GROUP.<ChoicePoint>(RESUMING) behavior
            // uml: [!hasResourceId(vars.message)] TransitionTo(CREATING)
            if !hasResourceId(vars.message)
            {
                // Step 1: Exit states until we reach `ACITVE_GROUP` state (Least Common Ancestor for transition). Already at LCA, no exiting required.
                
                // Step 2: Transition action: ``.
                
                // Step 3: Enter/move towards transition target `CREATING`.
                self.BUSY_GROUP_enter()
                self.CREATING_enter()
                
                // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
                return
            } // end of behavior for ACITVE_GROUP.<ChoicePoint>(RESUMING)
            
            // ACITVE_GROUP.<ChoicePoint>(RESUMING) behavior
            // uml: [vars.fileOffset > 0] TransitionTo(UPLOADING)
            if vars.fileOffset > 0
            {
                // Step 1: Exit states until we reach `ACITVE_GROUP` state (Least Common Ancestor for transition). Already at LCA, no exiting required.
                
                // Step 2: Transition action: ``.
                
                // Step 3: Enter/move towards transition target `UPLOADING`.
                self.BUSY_GROUP_enter()
                self.UPLOADING_enter()
                
                // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
                return
            } // end of behavior for ACITVE_GROUP.<ChoicePoint>(RESUMING)
            
            // ACITVE_GROUP.<ChoicePoint>(RESUMING) behavior
            // uml: else TransitionTo(CALCULATING)
            do {
                // Step 1: Exit states until we reach `ACITVE_GROUP` state (Least Common Ancestor for transition). Already at LCA, no exiting required.
                
                // Step 2: Transition action: ``.
                
                // Step 3: Enter/move towards transition target `CALCULATING`.
                self.BUSY_GROUP_enter()
                self.CALCULATING_enter()
                
                // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
                return
            } catch {} // end of behavior for ACITVE_GROUP.<ChoicePoint>(RESUMING)
        } catch {} // end of behavior for PAUSED
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state IDLE
    ////////////////////////////////////////////////////////////////////////////////
    
    private func IDLE_enter()
    {
        self.stateId = StateId.IDLE
    }
    
    private func IDLE_exit()
    {
        self.stateId = StateId.ROOT
    }
    
    private func IDLE_send()
    {
        // IDLE behavior
        // uml: send [hasAttachment(vars.message)] TransitionTo(CACHING)
        if hasAttachment(vars.message)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            self.IDLE_exit()
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `CACHING`.
            self.ACITVE_GROUP_enter()
            self.BUSY_GROUP_enter()
            self.CACHING_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } // end of behavior for IDLE
        
        // IDLE behavior
        // uml: send [!hasAttachment(vars.message)] TransitionTo(SENDING)
        if !hasAttachment(vars.message)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            self.IDLE_exit()
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `SENDING`.
            self.ACITVE_GROUP_enter()
            self.BUSY_GROUP_enter()
            self.SENDING_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } // end of behavior for IDLE
    }
    
    // Thread safe.
    public static func stateIdToString(_ id : StateId )
     -> String     {
        switch id
        {
            case StateId.ROOT: return "ROOT"
            case StateId.ACITVE_GROUP: return "ACITVE_GROUP"
            case StateId.BUSY_GROUP: return "BUSY_GROUP"
            case StateId.CACHING: return "CACHING"
            case StateId.CALCULATING: return "CALCULATING"
            case StateId.CREATING: return "CREATING"
            case StateId.SENDING: return "SENDING"
            case StateId.UPLOADING: return "UPLOADING"
            case StateId.PAUSED: return "PAUSED"
            case StateId.IDLE: return "IDLE"
            default: return "?"
        }
     }
    
    // Thread safe.
    public static func eventIdToString(_ id : EventId )
     -> String     {
        switch id
        {
            case EventId.CANCEL: return "CANCEL"
            case EventId.DIDCACHEATTACHMENT: return "DIDCACHEATTACHMENT"
            case EventId.DIDCALCULATEFILESIZE: return "DIDCALCULATEFILESIZE"
            case EventId.DIDCREATERESOURCE: return "DIDCREATERESOURCE"
            case EventId.DIDFAIL: return "DIDFAIL"
            case EventId.DIDSENDMESSAGE: return "DIDSENDMESSAGE"
            case EventId.DIDUPLOADCHUNK: return "DIDUPLOADCHUNK"
            case EventId.PAUSE: return "PAUSE"
            case EventId.RESUME: return "RESUME"
            case EventId.SEND: return "SEND"
            default: return "?"
        }
     }
}
